--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html" tabindex="-1" >Contact us</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="services.html" tabindex="-1" >Services</a>
-        </li>
+        </li> -->
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -69,7 +69,7 @@
                         <h2 class="aboutus-title">About Us</h2>
                         <p class="aboutus-text">Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
                         <p class="aboutus-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem</p>
-                        <a class="aboutus-more" href="#">read more</a>
+                       
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -82,7 +82,7 @@
                         <div class="feature-box">
                             <div class="clearfix">
                                 <div class="iconset">
-                                    <span class="glyphicon glyphicon-cog icon"></span>
+                                    <!-- <span class="glyphicon glyphicon-cog icon"></span> -->
                                 </div>
                                 <div class="feature-content">
                                     <h4>Work with heart</h4>
@@ -93,7 +93,7 @@
                         <div class="feature-box">
                             <div class="clearfix">
                                 <div class="iconset">
-                                    <span class="glyphicon glyphicon-cog icon"></span>
+                                    <!-- <span class="glyphicon glyphicon-cog icon"></span> -->
                                 </div>
                                 <div class="feature-content">
                                     <h4>Reliable services</h4>
@@ -104,7 +104,7 @@
                         <div class="feature-box">
                             <div class="clearfix">
                                 <div class="iconset">
-                                    <span class="glyphicon glyphicon-cog icon"></span>
+                                    <!-- <span class="glyphicon glyphicon-cog icon"></span> -->
                                 </div>
                                 <div class="feature-content">
                                     <h4>Great support</h4>
@@ -120,19 +120,53 @@
 <!-- team -->
  
 
-<!-- footer -->
-<div class="container">
-<footer class="pt-3 mt-4 text-muted border-top ">
-     Easybrand Marketing Agency &copy; 2021
+ <footer class="w-100 py-4 flex-shrink-0">
+        <div class="container py-4">
+            <div class="row gy-4 gx-5">
+                <div class="col-lg-4 col-md-6" style="margin-left: px;">
+                    <h5 class="h1 text-white">FB.</h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-muted">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Get started</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-muted">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Get started</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="text-white mb-3">Newsletter</h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
  
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
-<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+
     
   </body>
 
