--- a/about.html
+++ b/about.html
@@ -26,9 +26,10 @@
     <link href="css/style.css" rel="stylesheet">
 
   </head>
+  <body>
 <!-- nav -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container">
+  <nav class="navbar navbar-expand-md  fixed-top " id="nav">
+  <div class="container" id="navitems">
     
     <a class="navbar-brand" href="#">EasyBrand Services</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -38,10 +39,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="about.html">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html" tabindex="-1" >Contact us</a>
@@ -52,7 +53,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
   </div>
@@ -117,23 +118,23 @@
             </div>
         </div>
     </div>
+
 <!-- team -->
  
-
+<!-- foooter -->
  <footer class="w-100 py-4 flex-shrink-0">
         <div class="container py-4">
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6" style="margin-left: px;">
-                    <h5 class="h1 text-white">FB.</h5>
-                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p>
+                    <h5 class="h4 text-white">EASYBRAND SERVICES</h5>
+                    <p class="small text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Easybrandservices.com</a></p>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 class="text-white mb-3">Quick links</h5>
-                    <ul class="list-unstyled text-muted">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Get started</a></li>
+                    <ul class="list-unstyled" style="color: #ffffff;">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
                 </div>
@@ -159,15 +160,8 @@
             </div>
         </div>
     </footer>
-</div>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
- 
-<!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
-
-
-    
   </body>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </html>
