--- a/index.html
+++ b/index.html
@@ -121,11 +121,13 @@
         <img src="img/head.jpg" class="d-block mx-lg-auto img-fluid cover" loading="lazy">
       </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Digital Branding Agency</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3">An online branding and advertising Comapny</h1>
+        <p class="lead">We are focused on branding and advertising for small medium enterprises. Our Goal is to get your business to the right audience.
+          TRY US TODAY
+        </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Our Portfolio</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Our Services</button>
         </div>
       </div>
     </div>
@@ -209,7 +211,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 text-white rounded-3" id="abut">
           <h2>About Easybrand</h2>
-          <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+          <p>We are an online branding and advertising platform located in Lafia, we are an advocate for excellence, and our objective as a comapny is to get your business and product to the right audience using digital advertising and branding.</p>
           <a href="about.html">
                     <button class="btn btn-outline-light" type="button">Read More</button></a>
         </div>
@@ -217,7 +219,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Mission</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+          <p>A branding and advertising company helping businesses within and outside Nasarawa state reach out to prospective customers staying in Nasarawa state by providing different branding/advertising packages that meet any business needs regardless of size.</p>
           <!-- <button class="btn btn-outline-secondary" type="button">Example button</button> -->
         </div>
       </div>
